@@ -21,6 +21,7 @@ Changes between Oolite 1.77 and Oolite 1.77.1:
 * Some 'ghost' ship bugs fixed
 * Fix mission screen crash with numeric choice keys
 * Fix bug with cancelling galactic jump by script
+* Fix bug in validation for station interface creation
 
 -------------------------------------------------------------------------------
 
